Modifed colors_init.sh

--- a/init/net.config
+++ b/init/net.config
@@ -1,16 +1,16 @@
 #!/bin/bash
 
 # Ngrok (Port Tunneling)
-export ngrokDomain='https://amusing-stag-intense.ngrok-free.app'
-alias ngrok-auth='ngrok config add-authtoken 2PDU1acEKJ6zCBcWNMKtjbjpnab_67dVj1QA6Uc6H9VPHxU2X'
-alias http-tunnel='ngrok tunnel --label edge=edghts_2cwiqpRvBXNJdl7SbZBmYryOT8c http://localhost:80'
-alias http-expose='ngrok http 80'
+export ngrok_domain='https://amusing-stag-intense.ngrok-free.app'
+alias ngrok_auth='ngrok config add-authtoken 2PDU1acEKJ6zCBcWNMKtjbjpnab_67dVj1QA6Uc6H9VPHxU2X'
+alias http_tunnel='ngrok tunnel --label edge=edghts_2cwiqpRvBXNJdl7SbZBmYryOT8c http://localhost:80'
+alias http_expose='ngrok http 80'
 
 # Certbot (SSL)
-getCertFor() {
+get_cert() {
     local dns=$1
     local cmd="certbot --nginx --agree-tos --email ${email} -n -d ${dns} -d www.${dns}"
-    
+
     if [[ "$uid" -ne 0 ]]; then
         echo "Error: Must be run as root."
     fi
@@ -19,12 +19,12 @@ getCertFor() {
         exit 1
     fi
 
-    exec "$cmd"    
+    exec "$cmd"
 }
 
 # NGINX
-export nginxSites=/etc/nginx/sites-available
-alias nginxReload='sudo systemctl reload nginx'
-alias nginxAllow='sudo chown -R www-data:www-data . && sudo chmod -R 755 .'
+export nginx_sites=/etc/nginx/sites-available
+alias nginx_reload='sudo systemctl reload nginx'
+alias nginx_allow='sudo chown -R www-data:www-data . && sudo chmod -R 755 .'
 
 
