--- a/init/net.config
+++ b/init/net.config
@@ -23,8 +23,12 @@ get_cert() {
 }
 
 # NGINX
+export nginx_dir=/etc/nginx
 export nginx_sites=/etc/nginx/sites-available
-alias nginx_reload='sudo systemctl reload nginx'
+export nginx_active=/etc/nginx/sites-enabled
+export online=/var/www
+alias nginx_chk='sudo nginx -t'
+alias nginx_reload='sudo systemctl reload nginx && sudo nginx -t'
 alias nginx_allow='sudo chown -R www-data:www-data . && sudo chmod -R 755 .'
 
 
