--- a/init/net.config
+++ b/init/net.config
@@ -31,4 +31,40 @@ alias nginx_chk='sudo nginx -t'
 alias nginx_reload='sudo systemctl reload nginx && sudo nginx -t'
 alias nginx_allow='sudo chown -R www-data:www-data . && sudo chmod -R 755 .'
 
+# PDANet+
+export pdanet_host_public_ip=174.207.42.86
+export pdanet_host_ip=192.168.49.232
+export pdanet_gateway=192.168.49.1
+export pdanet_proxy_port=8000
+export pdanet_proxy="${pdanet_gateway}:${pdanet_proxy_port}"
+export netplus_ip=10.1.19.1
+export netplus_gateway=10.1.19.1
 
+# WSL
+export wsl_ip=172.22.65.107
+export wsl_gateway=172.22.64.1
+export wsl_mask=255.255.240.0
+export wsl_local_ip6="fe80::78f3:2760:d4c1:8ed%34"
+
+
+setup_dns() {
+    local file="/etc/resolv.conf"
+    local domains=(
+        "1.1.1.1"
+        "1.0.0.1"
+        "8.8.8.8"
+        "8.8.4.4"
+    )
+
+    if [[ ! -f "$file" ]]; then
+        sudo touch $file
+    fi
+
+    for dns in "${domains[@]}"; do
+        if ! grep -q "nameserver ${dns}" "$file"; then
+            echo "nameserver ${dns}" | sudo tee -a "$file" >/dev/null
+        fi
+    done
+}
+
+setup_dns
