--- a/init/prompt.config
+++ b/init/prompt.config
@@ -3,6 +3,11 @@
 
 set_prompt() {
     local user=$(whoami)
+    local file=$source/init/colors.conf
+
+    if [[ -z "$sym_skull" ]]; then
+        . $file
+    fi
 
     if [[ "$user" == "root" ]]; then
         color1=$yellow
