--- a/files/config/net.config
+++ b/files/config/net.config
@@ -47,7 +47,7 @@ export wsl_mask=255.255.240.0
 export wsl_local_ip6="fe80::78f3:2760:d4c1:8ed%34"
 
 
-setup_dns() {
+set_dns() {
     local file="/etc/resolv.conf"
     local domains=(
         "1.1.1.1"
@@ -65,6 +65,8 @@ setup_dns() {
             echo "nameserver ${dns}" | sudo tee -a "$file" >/dev/null
         fi
     done
+
+    echo -e "Initialized network settings."
 }
 
-setup_dns
+
