--- a/files/config/secrets.config
+++ b/files/config/secrets.config
@@ -1,9 +1,10 @@
+#!/bin/bash
+
 # Secrets
-secrets() {
+set_secrets() {
     local env=$HOME/.env
     if [[ -f "$env" ]]; then
         set -a; source "$env"; set +a
+        echo -e "Initialized secrets."
     fi
 }
-
-secrets
