--- a/files/config/colors.config
+++ b/files/config/colors.config
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-set_colors() {
+_set_colors() {
     export nc="\033[0m"
     export black="\033[0;30m"
     export red="\033[0;31m"
@@ -133,4 +133,10 @@ set_symbols() {
     export sym_zzz="\U1F4A4"
 }
 
-
+set_colors() {
+    _set_colors
+    set_escape_codes
+    set_symbols
+    
+    export set_colors_complete=true
+}
