--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -24,4 +24,6 @@ set_prompt() {
     fi
 
     PS1="\[$color1\]$frame1\[$color2\] \u \[$color1\]$frame2\[$nc\]"
+
+    export set_prompt_complete=true
 }
