--- a/files/config/secrets.config
+++ b/files/config/secrets.config
@@ -5,6 +5,8 @@ set_secrets() {
     local env=$HOME/.env
     if [[ -f "$env" ]]; then
         set -a; source "$env"; set +a
-        echo -e "Initialized secrets."
     fi
+
+export set_secrets_complete=true
+
 }
