--- a/files/wsl/wsl.config
+++ b/files/wsl/wsl.config
@@ -2,6 +2,8 @@
 
 # WSL Environment Configuration
 
+
+set_wsl() {
 # Add Windows Locations to PATH
 export PATH=$PATH:/mnt/c/Windows/System32
 export PATH=$PATH:/mnt/c/ffmpeg/bin
@@ -86,24 +88,27 @@ show_wsl() {
 }
 
 workon() {
-    local app=$1
-    local root="$G"/.dev/projects/active
-    local alt="$C"/dev/projects/active
+        local app=$1
+        local root="$G"/.dev/projects/active
+        local alt="$C"/dev/projects/active
 
-    if [[ ! -d "$root" ]]; then
-        local root="$alt"
-    fi
+        if [[ ! -e "$root" ]]; then
+            local root="$alt"
+        fi
 
-    if [[ "$@" -eq 0 ]]; then
-        local dir="$root"
-    else
-        local dir="$root"/"$app"
-    fi
+        if [[ "$@" -eq 0 ]]; then
+            local dir="$root"
+        else
+            local dir="$root"/"$app"
+        fi
 
-    if [[ ! -d "$dir" ]]; then
-        mkdir -p "$dir"
-    fi
+        if [[ ! -d "$dir" ]]; then
+            mkdir -p "$dir"
+        fi
 
-    cd "$dir" || echo "Error: Could not locate project directory."
+        cd "$dir" || echo "Error: Could not locate project directory."
+        clear
+    }
 
+    set_wsl_complete=true
 }
