--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -4,6 +4,7 @@
 set_prompt() {
     local user=$(whoami)
     local file=$source/init/colors.conf
+    local host=sojourney
 
     if [[ -z "$sym_skull" ]]; then
         . $file
@@ -17,13 +18,15 @@ set_prompt() {
         symbol=$sym_skull
     else
         color1=$purple
-        color2=$blue
+        color2=$cyan
+        color3=$green
         frame1="|$"
         frame2="$|"
         symbol=""
+        
     fi
 
-    PS1="\[$color1\]$frame1\[$color2\] \u \[$color1\]$frame2\[$nc\]"
+    PS1="\[$color1\]$frame1\[$color2\] \u\[$color3\]@\[$color2\]${host} \[$color1\]$frame2\[$nc\]"
 
     export set_prompt_complete=true
 }
