--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -17,16 +17,15 @@ set_prompt() {
         frame2="#|"
         symbol=$sym_skull
     else
-        color1=$purple
-        color2=$cyan
-        color3=$green
-        frame1="|$"
-        frame2="$|"
+        color1=$greener
+        color2=$bold_cyan
+        frame1=""
+        frame2="|"
         symbol=""
         
     fi
 
-    PS1="\[$color1\]$frame1\[$color2\] \u\[$color3\]@\[$color2\]${host} \[$color1\]$frame2\[$nc\]"
+    PS1="\[$color1\]$frame1\[$color2\] \u\[$color1\]@\[$color2\]${host} \[$color1\]$frame2\[$nc\] "
 
     export set_prompt_complete=true
 }
