Updated chkport.sh, wrote chatbot deployment script

--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -4,7 +4,7 @@
 set_prompt() {
     local user=$(whoami)
     local file=$source/init/colors.conf
-    local host=sojourney
+    local host=spectre
 
     if [[ -z "$sym_skull" ]]; then
         . $file
@@ -17,15 +17,15 @@ set_prompt() {
         frame2="#|"
         symbol=$sym_skull
     else
-        color1=$greener
-        color2=$bold_cyan
-        frame1=""
-        frame2="|"
+        color1=$purple
+        color2=$bold_blue
+        frame1="|:"
+        frame2=":|$"
         symbol=""
         
     fi
 
-    PS1="\[$color1\]$frame1\[$color2\] \u\[$color1\]@\[$color2\]${host} \[$color1\]$frame2\[$nc\] "
+    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]@\[$color2\]${host}\[$color1\]$frame2\[$nc\] "
 
     export set_prompt_complete=true
 }
