--- a/files/config/net.config
+++ b/files/config/net.config
@@ -1,32 +1,25 @@
 #!/bin/bash
 
-# Ngrok (Port Tunneling)
+# General
+export email=webmaster@alexpariah.live
+export chatbot_ip=172.232.9.148
+
+alias ssh-ai="ssh bot@$chatbot_ip"
+
+# Ngrok
 export ngrok_domain='https://amusing-stag-intense.ngrok-free.app'
-alias ngrok_auth='ngrok config add-authtoken 2PDU1acEKJ6zCBcWNMKtjbjpnab_67dVj1QA6Uc6H9VPHxU2X'
-alias http_tunnel='ngrok tunnel --label edge=edghts_2cwiqpRvBXNJdl7SbZBmYryOT8c http://localhost:80'
-alias http_expose='ngrok http 80'
+export auth_token=2PDU1acEKJ6zCBcWNMKtjbjpnab_67dVj1QA6Uc6H9VPHxU2X
 
-# Certbot (SSL)
-get_cert() {
-    local dns=$1
-    local cmd="certbot --nginx --agree-tos --email ${email} -n -d ${dns} -d www.${dns}"
-
-    if [[ "$uid" -ne 0 ]]; then
-        echo "Error: Must be run as root."
-    fi
-    if [[ "$@" -eq 0 ]]; then
-        echo "Error: Include a valid domain as argument."
-        exit 1
-    fi
-
-    exec "$cmd"
-}
+alias ngrok_80='ngrok http 80'
+alias ngrok_auth='ngrok config add-authtoken $auth_token'
+alias ngrok_tunnel='ngrok tunnel --label edge=edghts_2cwiqpRvBXNJdl7SbZBmYryOT8c http://localhost:80'
 
 # NGINX
 export nginx_dir=/etc/nginx
 export nginx_sites=/etc/nginx/sites-available
 export nginx_active=/etc/nginx/sites-enabled
 export online=/var/www
+
 alias nginx_chk='sudo nginx -t'
 alias nginx_reload='sudo systemctl reload nginx && sudo nginx -t'
 alias nginx_allow='sudo chown -R www-data:www-data . && sudo chmod -R 755 .'
@@ -45,7 +38,6 @@ export wsl_ip=172.22.65.107
 export wsl_gateway=172.22.64.1
 export wsl_mask=255.255.240.0
 export wsl_local_ip6="fe80::78f3:2760:d4c1:8ed%34"
-
 
 set_dns() {
     local file="/etc/resolv.conf"
