Added alias to check os version

--- a/files/config/wsl.config
+++ b/files/config/wsl.config
@@ -2,6 +2,8 @@
 
 # WSL Environment Configuration
 
+# Check Current Version of OS
+alias osinfo='lsb_release -a'
 
 set_wsl() {
 # Add Windows Locations to PATH
@@ -37,6 +39,7 @@ alias c4='cd $win_ssh'
 
 # /g/
 export win_dev="/mnt/g/.dev"
+export win_code="/mnt/c/code"
 export win_sites="/mnt/g/.dev/sites"
 export win_active='/mnt/g/.dev/projects/current'
 alias g0='$win_active'
@@ -112,3 +115,4 @@ workon() {
 
     set_wsl_complete=true
 }
+
