--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -1,31 +1,34 @@
 #!/bin/bash
-# prompt.sh (7.4.24)
+# prompt.sh (11.9.24)
 
 set_prompt() {
     local user=$(whoami)
     local file=$source/init/colors.conf
-    local host=spectre
+    local host=$(hostname)
 
     if [[ -z "$sym_skull" ]]; then
         . $file
     fi
 
     if [[ "$user" == "root" ]]; then
+        # root
         color1=$yellow
         color2=$red
-        frame1="|#"
-        frame2="#|"
+        frame1="|:"
+        frame2=":|"
+        type="#"
         symbol=$sym_skull
     else
-        color1=$purple
-        color2=$bold_blue
+        color1=$bold_yellow
+        color2=$bold_red
+        color3=$green
         frame1="|:"
-        frame2=":|$"
+        frame2=":|"
+        type="$"
         symbol=""
-        
     fi
 
-    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]@\[$color2\]${host}\[$color1\]$frame2\[$nc\] "
+    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]@\[$color2\]${host}\[$color1\]$frame2\[$color3\]${type}\[$nc\] "
 
     export set_prompt_complete=true
 }
