--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -20,7 +20,7 @@ set_prompt() {
         symbol=$sym_skull
     else
         color1=$bold_yellow
-        color2=$bold_red
+        color2=$red
         color3=$green
         frame1="|:"
         frame2=":|"
