--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -19,9 +19,9 @@ set_prompt() {
         type="#"
         symbol=$sym_skull
     else
-        color1=$bold_yellow
-        color2=$red
-        color3=$green
+        color1=$bold_purple
+        color2=$blue
+        color3=$cyan
         frame1="|:"
         frame2=":|"
         type="$"
