--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -12,16 +12,16 @@ set_prompt() {
 
     if [[ "$user" == "root" ]]; then
         # root
-        color1=$yellow
+        color1=$bold_yellow
         color2=$red
         frame1="|:"
         frame2=":|"
         type="#"
         symbol=$sym_skull
     else
-        color1=$bold_purple
-        color2=$blue
-        color3=$cyan
+        color1=$bold_yellow
+        color2=$red
+        color3=$yellow
         frame1="|:"
         frame2=":|"
         type="$"
