--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -21,7 +21,7 @@ set_prompt() {
     else
         color1=$bold_yellow
         color2=$red
-        color3=$yellow
+        color3=$cyan
         frame1="|:"
         frame2=":|"
         type="$"
