Added pdaproxy function in net.config

--- a/files/config/net.config
+++ b/files/config/net.config
@@ -61,4 +61,26 @@ set_dns() {
     export set_dns_complete=true
 }
 
+pdanet() {
 
+    if [ -z "$HTTP_PROXY" ]; then
+        export pda_color=${yellow}
+        export pda_state="Unset"
+    fi
+
+    if [ $1 == "on" ]; then
+        export HTTP_PROXY=192.168.49.1:8000
+        export HTTPS_PROXY=192.168.49.1:8000
+        export pda_state="ON"
+        export pda_color=${green}
+    fi
+
+    if [ $1 == "off" ]; then
+        unset HTTP_PROXY
+        unset HTTPS_PROXY
+        export pda_state="OFF"
+        export pda_color=${red}
+    fi
+
+    echo -e "Proxy: ${pda_color}$pda_state${nc}"
+}
