--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -5,6 +5,11 @@ set_prompt() {
     local user=$(whoami)
     local file=$source/init/colors.conf
     local host=$(hostname)
+    local nhdir=/home/kali
+
+    if [ -d "$nhdir" ]; then
+        local host=nethunter
+    fi
 
     if [[ -z "$sym_skull" ]]; then
         . $file
@@ -14,21 +19,22 @@ set_prompt() {
         # root
         color1=$bold_yellow
         color2=$red
+        color3=$yellow
         frame1="|:"
         frame2=":|"
         type="#"
-        symbol=$sym_skull
+        symbol="@"
     else
-        color1=$bold_yellow
-        color2=$red
-        color3=$cyan
+        color1=$cyan
+        color2=$purpler
+        color3=$blue
         frame1="|:"
         frame2=":|"
         type="$"
-        symbol=""
+        symbol="@"
     fi
 
-    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]@\[$color2\]${host}\[$color1\]$frame2\[$color3\]${type}\[$nc\] "
+    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]${symbol}\[$color2\]${host}\[$color1\]$frame2\[$color3\]${type}\[$nc\] "
 
     export set_prompt_complete=true
 }
