--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -27,14 +27,14 @@ set_prompt() {
     else
         color1=$cyan
         color2=$purpler
-        color3=$blue
+        color3=$bold_blue
         frame1="|:"
         frame2=":|"
         type="$"
         symbol="@"
     fi
 
-    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]${symbol}\[$color2\]${host}\[$color1\]$frame2\[$color3\]${type}\[$nc\] "
+    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]${symbol}\[$color2\]${host}\[$color1\]$frame2\[$color3\]\w\[$color1\]$type\[$nc\] "
 
     export set_prompt_complete=true
 }
