--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -6,9 +6,12 @@ set_prompt() {
     local file=$source/init/colors.conf
     local host=$(hostname)
     local nhdir=/home/kali
+    local wslchk=/etc/wsl.conf
 
     if [ -d "$nhdir" ]; then
         local host=nethunter
+    elif [ -f "$wslchk" ]; then
+        local host=spectre
     fi
 
     if [[ -z "$sym_skull" ]]; then
@@ -20,21 +23,24 @@ set_prompt() {
         color1=$bold_yellow
         color2=$red
         color3=$yellow
+        color4=$greenest
         frame1="|:"
         frame2=":|"
         type="#"
         symbol="@"
     else
+        # superuser
         color1=$cyan
         color2=$purpler
         color3=$bold_blue
+        color4=$greenest
         frame1="|:"
         frame2=":|"
         type="$"
         symbol="@"
     fi
 
-    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]${symbol}\[$color2\]${host}\[$color1\]$frame2\[$color3\]\w\[$color1\]$type\[$nc\] "
+    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]${symbol}\[$color2\]${host}\[$color1\][\[$color3\]\w\[$color4\]]\[$color1\]$frame2\[$color4\]$type\[$nc\] "
 
     export set_prompt_complete=true
 }
