Added Debian profile

--- a/files/config/colors.config
+++ b/files/config/colors.config
@@ -133,6 +133,60 @@ set_symbols() {
     export sym_zzz="\U1F4A4"
 }
 
+refcolors() {
+
+    local color_vars=(
+        "nc" "black" "red" "green" "yellow" "blue" "purple" "cyan" "white"
+        "bold_black" "bold_red" "bold_green" "bold_yellow" "bold_blue" "bold_purple" "bold_cyan" "bold_white"
+        "line_black" "line_red" "line_green" "line_yellow" "line_blue" "line_purple" "line_cyan" "line_white"
+        "bg_black" "bg_red" "bg_green" "bg_yellow" "bg_blue" "bg_purple" "bg_cyan" "bg_white"
+        "blacker" "redder" "greener" "yellower" "bluer" "purpler" "cyaner" "whiter"
+        "blackest" "reddest" "greenest" "yellowest" "bluest" "purplest" "cyanest" "whitest"
+        "bg_blacker" "bg_redder" "bg_greener" "bg_yellower" "bg_bluer" "bg_purpler" "bg_cyaner" "bg_whiter"
+    )
+
+    echo "    ----------"
+    echo "      COLORS"
+    echo "    -----------"
+    
+    for var in "${color_vars[@]}"; do
+         eval "echo -e \"\${$var}${var}\${nc}\""
+    done
+}
+
+refsymbols() {
+    # Array of symbol variable names
+    local symbol_vars=(
+        "sym_airplane" "sym_alarm" "sym_angry" "sym_basketball" "sym_bear" "sym_bicycle" "sym_bio"
+        "sym_book" "sym_bus" "sym_car" "sym_cat" "sym_clap" "sym_coffee" "sym_dog" "sym_drum"
+        "sym_earth" "sym_fire" "sym_football" "sym_fox" "sym_ghost" "sym_globe" "sym_guitar"
+        "sym_heart" "sym_horse" "sym_laugh" "sym_lion" "sym_mail" "sym_medal" "sym_moon"
+        "sym_motorcycle" "sym_mountain" "sym_mouse" "sym_music" "sym_nuke" "sym_panda" "sym_peace"
+        "sym_saxophone" "sym_skull" "sym_smile" "sym_soccer" "sym_star" "sym_sun" "sym_sweat"
+        "sym_think" "sym_thumbs_down" "sym_thumbs_up" "sym_tiger" "sym_train" "sym_trophy"
+        "sym_unicorn" "sym_universe" "sym_volcano" "sym_wink" "sym_yinyang" "sym_zzz"
+    )
+
+ 
+    local max_length=0
+    for var in "${symbol_vars[@]}"; do
+        [[ ${#var} -gt $max_length ]] && max_length=${#var}
+    done
+
+    echo
+    echo "-----------"
+    echo "  SYMBOLS  "
+    echo "-----------"
+    echo
+
+    for var in "${symbol_vars[@]}"; do
+        # Get the value of the symbol and pad spaces for alignment
+        local value=$(eval "echo \$$var")
+        printf "%-*s: %s\n" $((max_length + 1)) "$var" "$value"
+    done
+}
+
+
 set_colors() {
     _set_colors
     set_escape_codes
