--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -28,8 +28,26 @@ set_prompt() {
         frame2=":|"
         type="#"
         symbol="@"
-    else
-        # superuser
+    elif [ "$ID" == "debian" ]; then
+        host=devOps
+        color1=$red
+        color2=$blue
+        color3=$bold_yellow
+        color4=$red
+        frame1="|:"
+        frame2=":|"
+        type="$"
+        symbol="@"
+    elif [[ "$user" == "kali" ]]; then
+       	color1=$purpler
+        color2=$bold_blue
+        color3=$bold_green
+        color4=$cyan
+        frame1="|:"
+        frame2=":|"
+        type="$"
+        symbol="☠  "
+    elif [ "$ID" == "ubuntu" ]; then
         color1=$cyan
         color2=$purpler
         color3=$bold_blue
@@ -38,9 +56,9 @@ set_prompt() {
         frame2=":|"
         type="$"
         symbol="@"
-    fi
+     fi
 
-    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]${symbol}\[$color2\]${host}\[$color1\][\[$color3\]\w\[$color4\]]\[$color1\]$frame2\[$color4\]$type\[$nc\] "
+    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]${symbol}\[$color2\]${host}\[$color1\]$frame2\[$color4\][\[$color3\]\w\[$color4\]]\[$color4\]$type\[$nc\] "
 
     export set_prompt_complete=true
 }
