--- a/files/config/prompt.config
+++ b/files/config/prompt.config
@@ -3,62 +3,49 @@
 
 set_prompt() {
     local user=$(whoami)
-    local file=$source/init/colors.conf
     local host=$(hostname)
-    local nhdir=/home/kali
-    local wslchk=/etc/wsl.conf
-
-    if [ -d "$nhdir" ]; then
-        local host=nethunter
-    elif [ -f "$wslchk" ]; then
-        local host=spectre
-    fi
-
-    if [[ -z "$sym_skull" ]]; then
-        . $file
-    fi
+    local wsl="/etc/wsl.conf"
+    local fr="-:-"
+    local sym="@"
+    local sign="$"
 
     if [[ "$user" == "root" ]]; then
-        # root
-        color1=$bold_yellow
-        color2=$red
-        color3=$yellow
-        color4=$greenest
-        frame1="|:"
-        frame2=":|"
-        type="#"
-        symbol="@"
-    elif [ "$ID" == "debian" ]; then
-        host=devOps
-        color1=$red
-        color2=$blue
-        color3=$bold_yellow
-        color4=$red
-        frame1="|:"
-        frame2=":|"
-        type="$"
-        symbol="@"
-    elif [[ "$user" == "kali" ]]; then
-       	color1=$purpler
-        color2=$bold_blue
-        color3=$bold_green
-        color4=$cyan
-        frame1="|:"
-        frame2=":|"
-        type="$"
-        symbol="☠  "
-    elif [ "$ID" == "ubuntu" ]; then
-        color1=$cyan
-        color2=$purpler
-        color3=$bold_blue
-        color4=$greenest
-        frame1="|:"
-        frame2=":|"
-        type="$"
-        symbol="@"
-     fi
+        host="$(hostname)"
+        sign="#"
+        c_fr=$bold_yellow
+        c_usr=$red
+        sym=$sym_skull
+        c_host=$red
+        c_pwd=$bold_yellow
+    else
+        if [ "$distro" == "debian" ]; then
+            host=devOps
+            c_fr=$bold_blue
+            c_usr=$bold_green
+            c_host=$bold_green
+            c_pwd=$yellow
+            c_sign=$bold_yellow
+        elif [ "$distro" == "kali" ]; then
+            host=secOps
+          	c_fr=$purpler
+            c_usr=$bold_blue
+            c_host=$bold_green
+            c_sign=$cyan
+        elif [ "$distro" == "ubuntu" ]; then
+            host=ubuntu
+            c_fr=$cyan
+            c_usr=$purpler
+            c_host=$bold_blue
+            c_sign=$greenest
+        fi
+   fi
 
-    PS1="\[$color1\]$frame1\[$color2\]\u\[$color1\]${symbol}\[$color2\]${host}\[$color1\]$frame2\[$color4\][\[$color3\]\w\[$color4\]]\[$color4\]$type\[$nc\] "
+   if [ ! -f "$wsl" ] && [ "$host" == "secOps" ]; then
+       host=nethunter
+   fi
 
-    export set_prompt_complete=true
+
+#  PS1="\[$c_fr\]$fr\[$c_usr\]\u\[$c_fr\]$sym\[$c_host\]$host\[$c_fr\]$fr\[$c_fr\][\[$c_pwd\]\w\[$c_fr\]]\[$c_sign\]$sign\[$nc\] "
+   PS1="\[$c_fr\]$fr\[$c_usr\]\u\[$c_fr\]$sym\[$c_host\]$host\[$c_fr\]$fr\[$c_sign\]$sign\[$nc\] "
+
 }
